// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Exercise name exist should match the snapshot 1`] = `
<section
  style={
    Object {
      "borderBottom": "1px solid rgba(0, 0, 0, 0.15)",
      "display": "flex",
      "fontFamily": "sans-serif",
      "justifyContent": "space-between",
      "padding": "1rem",
    }
  }
>
  <div
    className="left-side"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
      }
    }
  >
    <a
      className="h-menu"
      style={
        Object {
          "fontSize": "16px",
        }
      }
    >
      ☰
    </a>
    <div
      className="h-date"
      style={
        Object {
          "fontSize": "12px",
          "marginLeft": "4rem",
        }
      }
    >
      Saturday, Jul 15th
    </div>
    <div
      className="h-title"
      data-test="currently"
      style={
        Object {
          "fontSize": "16px",
          "marginLeft": "3rem",
        }
      }
    >
      Pull Up
    </div>
  </div>
  <div
    className="right-side"
  >
    <div>
      <button
        className="twitter"
        onClick={[Function]}
      >
        login with twitter
      </button>
      <button
        className="facebook"
        onClick={[Function]}
      >
        login with facebook
      </button>
      <button
        className="guest"
        onClick={[Function]}
      >
        login as guest
      </button>
    </div>
    <UserImage />
  </div>
</section>
`;

exports[`Header component Shallow snapshot matches the previous 1`] = `
<section
  style={
    Object {
      "borderBottom": "1px solid rgba(0, 0, 0, 0.15)",
      "display": "flex",
      "fontFamily": "sans-serif",
      "justifyContent": "space-between",
      "padding": "1rem",
    }
  }
>
  <div
    className="left-side"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
      }
    }
  >
    <a
      className="h-menu"
      style={
        Object {
          "fontSize": "16px",
        }
      }
    >
      ☰
    </a>
    <div
      className="h-date"
      style={
        Object {
          "fontSize": "12px",
          "marginLeft": "4rem",
        }
      }
    >
      Saturday, Jul 15th
    </div>
    <div
      className="h-title"
      data-test="currently"
      style={
        Object {
          "fontSize": "16px",
          "marginLeft": "3rem",
        }
      }
    >
      Start Workout
    </div>
  </div>
  <div
    className="right-side"
  >
    <div>
      <button
        className="twitter"
        onClick={[Function]}
      >
        login with twitter
      </button>
      <button
        className="facebook"
        onClick={[Function]}
      >
        login with facebook
      </button>
      <button
        className="guest"
        onClick={[Function]}
      >
        login as guest
      </button>
    </div>
    <UserImage />
  </div>
</section>
`;
